--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "morgan": "~1.9.1",
     "response-time": "2.3.2",
     "spdy": "4.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
